--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,13 +1,8 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+    --background: #F9E9DC;
+    --box-shadow: 0px 4px 8px 2px rgb(0,0,0, 0.03);
+    --box-background: #FBF7F4;
+    --button-background: #DF6C49;
 }
 
 html,
@@ -17,7 +12,6 @@ body {
 }
 
 body {
-  color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -35,8 +29,8 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
+/*@media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
-}
+}*/
