--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,13 +1,15 @@
 :root {
-    --background: #F9E9DC;
-    --box-shadow: 0px 4px 8px 2px rgb(0,0,0, 0.03);
-    --box-background: #FBF7F4;
-    --button-background: #DF6C49;
+  --background: #f9e9dc;
+  --box-shadow: 0px 4px 8px 2px rgb(0, 0, 0, 0.03);
+  --box-background: #fbf7f4;
+  --button-background: #df6c49;
+  --navbar-background: #127e8c;
 }
 
 html,
 body {
-  max-width: 100vw;
+  width: 100%;
+  height: 100%;
   overflow-x: hidden;
 }
 
@@ -28,9 +30,3 @@ a {
   color: inherit;
   text-decoration: none;
 }
-
-/*@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}*/
