--- a/frontend/src/app/(unauthenticated_user)/styles.module.css
+++ b/frontend/src/app/(unauthenticated_user)/styles.module.css
@@ -1,29 +1,28 @@
 .all_content {
   display: flex;
   flex-direction: column;
-  justify-content: between;
   gap: 20px;
 }
 
 .main_content {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  justify-content: between;
   gap: 20px;
+  height: 75vh;
 }
 
 .login_box {
   display: flex;
   flex-direction: column;
-  justify-content: between;
   align-items: center;
-  max-width: 400px;
-  min-width: 200px;
-  background: var(--box-background);
-  padding: 10px;
-  border-radius: 10px;
-  box-shadow: var(--box-shadow);
+  max-width: 800px;
+  min-width: 400px;
+  background: var(--white2);
+  padding: 25px;
+  border-radius: 25px;
+  box-shadow: 0px 5px 5px var(--shadow-color);
 }
 
 .login_box h2 {
@@ -33,22 +32,34 @@
 .login_form {
   display: flex;
   flex-direction: column;
-  justify-content: between;
   gap: 15px;
   align-items: left;
+  width: calc(100% - 100px);
+  line-height: 25px;
 }
 
 .login_form_field {
   display: flex;
   flex-direction: column;
-  gap: 10px;
 }
 
 #login_submit {
-  background: var(--button-background);
+  font-family: var(--font-josefin);
+  background: var(--red1);
   color: white;
   border: 0px;
   border-radius: 50px;
   padding: 10px;
-  font-weight: bold;
+  margin-top: 15px;
+  font-size: 1rem;
+  transition: 0.25s;
+  width: 50%;
+  align-self: center;
+}
+
+#login_submit:hover {
+  cursor: pointer;
+  transition: 0.25s;
+  transform: translateY(-2px);
+  box-shadow: 0px 5px 2px var(--shadow-color);
 }
