--- a/frontend/src/app/components/styles.module.css
+++ b/frontend/src/app/components/styles.module.css
@@ -1,10 +1,15 @@
 .unauth_navbar {
   width: 100%;
-  padding: 20px;
-  background-color: #1992a2;
+  padding: 20px 0px;
+  background-color: var(--cyan2);
   display: flex;
-  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   color: white;
+  height: 60px;
+  text-shadow: 5px 5px 0px var(--shadow-color);
+  font-family: var(--font-kode);
+  box-shadow: 0px 5px 5px var(--shadow-color);
 }
 
 .auth_navbar {
