--- a/frontend/src/app/(unauthenticated_user)/styles.module.css
+++ b/frontend/src/app/(unauthenticated_user)/styles.module.css
@@ -43,6 +43,16 @@
   flex-direction: column;
 }
 
+.login_form_error_message {
+  min-height: 30px;
+}
+
+.error_message {
+  color: red;
+  margin: 0px;
+  font-size: 15px;
+}
+
 #login_submit {
   font-family: var(--font-josefin);
   background: var(--red1);
