Add styles and pages templates for auth routes. Update settings page to include change password component and styles

--- a/frontend/src/app/(authenticated_user)/styles.module.css
+++ b/frontend/src/app/(authenticated_user)/styles.module.css
@@ -1,6 +1,16 @@
-.auth_content {
+.auth_root {
   display: flex;
-  flex-direction: row;
   height: 100%;
   width: 100%;
+}
+
+.auth_content {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.auth_navbar {
+    width: 250px;
+    height: 100%;
 }
