--- a/frontend/src/app/(authenticated_user)/settings/styles.module.css
+++ b/frontend/src/app/(authenticated_user)/settings/styles.module.css
@@ -7,6 +7,16 @@
 
 .settings_change_password {
   min-width: 300px;
-  max-width: 600px;
+  max-width: 800px;
   overflow: auto;
+}
+
+.settings_change_password input[type="password"] {
+  font-family: var(--font-kode);
+  font-size: 20px;
+  background-color: rgba(0, 0, 0, 0.1);
+  border: 0px;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0px 3px 3px inset var(--shadow-color);
 }
