--- a/frontend/src/app/components/styles.module.css
+++ b/frontend/src/app/components/styles.module.css
@@ -16,12 +16,16 @@
   background-color: var(--cyan2);
   display: flex;
   flex-direction: column;
-  box-sizing: border-box;
+  font-family: var(--font-kode);
   color: white;
   padding: 20px;
   gap: 20px;
   width: 100%;
   height: 100%;
+}
+
+.auth_navbar h1 {
+  text-shadow: 5px 5px 0px var(--shadow-color);
 }
 
 .auth_navlinks_header {
@@ -81,7 +85,7 @@
   cursor: pointer;
   transition: 0.25s;
   transform: translateY(-2px);
-  box-shadow: 0px 5px 2px var(--shadow-color);
+  box-shadow: 0px 5px 5px var(--shadow-color);
 }
 
 .change_password_form {
