--- a/frontend/src/app/(authenticated_user)/users/styles.module.css
+++ b/frontend/src/app/(authenticated_user)/users/styles.module.css
@@ -3,4 +3,201 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
+  min-height: 100vh;
+}
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.right_button {
+  font-family: var(--font-josefin);
+  background: var(--red1);
+  color: white;
+  border: 0px;
+  border-radius: 50px;
+  padding: 10px;
+  margin-top: 15px;
+  font-size: 1rem;
+  transition: 0.25s;
+  width: 200px;
+  align-self: flex-end;
+  margin-left: auto;
+}
+.right_button:hover {
+  cursor: pointer;
+  transition: 0.25s;
+  transform: translateY(-2px);
+  box-shadow: 0px 5px 5px var(--shadow-color);
+}
+.centered_button {
+  font-family: var(--font-josefin);
+  background: var(--red1);
+  color: white;
+  border: 0;
+  border-radius: 50px;
+  padding: 10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-size: 1rem;
+  transition: 0.25s;
+  width: 200px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.centered_button:hover {
+  cursor: pointer;
+  transition: 0.25s;
+  transform: translateY(-2px);
+  box-shadow: 0px 5px 5px var(--shadow-color);
+}
+.user_button {
+  font-family: var(--font-josefin);
+  background: var(--blue1);
+  color: white;
+  border: 0px;
+  border-radius: 50px;
+  padding: 10px;
+  font-size: 1rem;
+  transition: 0.25s;
+  width: 200px;
+  align-self: flex-end;
+  margin-left: auto;
+  padding-left: 20px;
+  text-decoration: none;
+}
+.user_button:hover {
+  cursor: pointer;
+  transition: 0.25s;
+  transform: translateY(-2px);
+  box-shadow: 0px 5px 5px var(--shadow-color);
+}
+.nav_bar {
+  display: flex;
+  background-color: #f99779;
+  border-radius: 50px;
+  overflow: hidden;
+  width: 100%;
+}
+
+.nav_container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.nav_button {
+  font-family: var(--font-josefin);
+  background: none;
+  color: white;
+  border: 0;
+  border-radius: 0;
+  padding: 10px;
+  flex: 1;
+  font-size: 1rem;
+  transition: 0.25s;
+}
+.nav_button.selected {
+  background: var(--red1);
+}
+
+.scroll_list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  max-height: 400px;
+  overflow-y: auto;
+  padding-right: 10px;
+  flex-grow: 1;
+}
+.header_bar {
+  display: flex;
+  justify-content: space-between;
+  background-color: #f0f0f0;
+  padding: 10px;
+  font-weight: 550;
+  color: #444444;
+  border-bottom: 1px solid #ccc;
+}
+
+.column_header {
+  flex: 1;
+  text-align: center;
+}
+.list_item {
+  background-color: #f5f5f5;
+  border-radius: 8px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  border-bottom: 1px solid #ccc;
+}
+.list_item span {
+  flex: 1;
+  text-align: center;
+}
+.inline_info {
+  display: flex;
+  justify-content: space-between;
+}
+
+.course_name,
+.course_credits,
+.teacher_name,
+.max_enrollment {
+  flex: 1;
+  text-align: center;
+}
+.red_center_text {
+  color: red;
+  text-align: center;
+  font-weight: bold;
+  margin: 1rem 0;
+}
+.form_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 600px;
+  min-width: 400px;
+  background-color: #f5f5f5;
+  border-radius: 25px;
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
+  padding: 25px;
+  width: 100%;
+  margin: 0 auto;
+  box-sizing: border-box;
+}
+
+.field_container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-top: 10px;
+  align-items: center;
+}
+
+.label {
+  font-size: 0.9rem;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.input_field {
+  padding: 10px;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-top: 5px;
+  width: 100%;
+  max-width: 400px;
+  box-sizing: border-box;
+}
+.error {
+  color: red;
+  margin-bottom: 10px;
 }
