--- a/frontend/src/app/components/styles.module.css
+++ b/frontend/src/app/components/styles.module.css
@@ -136,3 +136,19 @@
   transform: translateY(-2px);
   box-shadow: 0px 5px 2px var(--shadow-color);
 }
+
+.majorsListItem{
+
+  font-family: var(--font-josefin);
+  background: var(--red1);
+  color: white;
+  border: 0px;
+  border-radius: 50px;
+  padding: 10px;
+  margin-top: 15px;
+  font-size: 1rem;
+  transition: 0.25s;
+  width: 50%;
+  align-self: center;
+
+}
