Add auth header. Generic table. Dashboard for student

--- a/frontend/src/app/(authenticated_user)/dashboard/styles.module.css
+++ b/frontend/src/app/(authenticated_user)/dashboard/styles.module.css
@@ -1,6 +1,18 @@
 .dashboard_root {
-  padding: 20px;
   display: flex;
   flex-direction: column;
   gap: 40px;
+  height: 100%;
+}
+
+.dashboard_student_major {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.dashboard_student_courses_section {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
 }
