--- a/frontend/src/app/components/styles.module.css
+++ b/frontend/src/app/components/styles.module.css
@@ -39,7 +39,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  padding-bottom: 20px;
+  padding-bottom: 40px;
 }
 
 .auth_navlink {
@@ -136,3 +136,32 @@
   transform: translateY(-2px);
   box-shadow: 0px 5px 2px var(--shadow-color);
 }
+
+.auth_header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.profile_button {
+  font-family: var(--font-josefin);
+  background: var(--red1);
+  color: white;
+  border: 0px;
+  border-radius: 50px;
+  padding: 10px;
+  margin-top: 15px;
+  font-size: 1rem;
+  transition: 0.25s;
+  width: 200px;
+  align-self: flex-end;
+  margin-left: auto;
+  text-align: center;
+}
+.profile_button:hover {
+  cursor: pointer;
+  transition: 0.25s;
+  transform: translateY(-2px);
+  box-shadow: 0px 5px 5px var(--shadow-color);
+}
+
