Add dashboard route. Add auth header.

--- a/frontend/src/app/(authenticated_user)/dashboard/styles.module.css
+++ b/frontend/src/app/(authenticated_user)/dashboard/styles.module.css
@@ -11,8 +11,18 @@
     gap: 40px;
 }
 
-.dashboard_student_courses_section {
+.dashboard_courses_section {
     display: flex;
     flex-direction: column;
     gap: 40px;
+}
+.dashboard_action_button_container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+}
+
+.dashboard_action_button {
+    max-width: 250px;
 }
