--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -13,7 +13,7 @@
   --red1: rgb(223, 108, 73);
   --red2: rgb(249, 151, 121);
   --shadow-color: rgba(0, 0, 0, 0.25);
-  --table-header-text: rgb(68,68,68);
+  --table-header-text: rgb(68, 68, 68);
   font-size: 25px;
 }
 
