Create dashboard. Add auth header. Add hot code reloading for frontend. (#17)
* Add hot code reloading

* Add auth header. Generic table. Dashboard for student

* Add endpoints for getting teachers courses

* Add dashboard route. Add auth header.

* formatting

--- a/frontend/src/app/(authenticated_user)/dashboard/styles.module.css
+++ b/frontend/src/app/(authenticated_user)/dashboard/styles.module.css
@@ -1,6 +1,28 @@
 .dashboard_root {
-  padding: 20px;
   display: flex;
   flex-direction: column;
   gap: 40px;
+  height: 100%;
+}
+
+.dashboard_student_major {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.dashboard_courses_section {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+.dashboard_action_button_container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+}
+
+.dashboard_action_button {
+  max-width: 250px;
 }
