Add some utilities. Fix some ui bugs. Add ability to add course. Add icons.

--- a/frontend/src/app/(authenticated_user)/styles.module.css
+++ b/frontend/src/app/(authenticated_user)/styles.module.css
@@ -9,10 +9,10 @@
   flex-direction: column;
   flex: 1;
   padding: 50px 80px;
-  gap: 60px;
+  gap: 40px;
 }
 
 .auth_navbar {
-  width: 250px;
+  max-width: 350px;
   height: 100%;
 }
