--- a/frontend/src/app/(authenticated_user)/dashboard/styles.module.css
+++ b/frontend/src/app/(authenticated_user)/dashboard/styles.module.css
@@ -11,11 +11,22 @@
   gap: 40px;
 }
 
+.dashboard_student_courses_table {
+    max-height: 250px;
+    overflow: auto;
+}
+
 .dashboard_courses_section {
   display: flex;
   flex-direction: column;
   gap: 40px;
 }
+
+.dashboard_teacher_courses_table {
+    max-height: 350px;
+    overflow: auto;
+}
+
 .dashboard_action_button_container {
   display: flex;
   flex-direction: column;
