--- a/frontend/src/app/components/styles.module.css
+++ b/frontend/src/app/components/styles.module.css
@@ -210,6 +210,29 @@
   box-shadow: 0px 5px 5px var(--shadow-color);
 }
 
+.cancel_button {
+  font-family: var(--font-josefin);
+  background: red;
+  color: white;
+  border: 0px;
+  border-radius: 50px;
+  padding: 10px;
+  margin-top: 15px;
+  font-size: 1rem;
+  transition: 0.25s;
+  width: 100%;
+  align-self: flex-end;
+  margin-left: auto;
+  text-align: center;
+}
+
+.cancel_button:hover {
+  cursor: pointer;
+  transition: 0.25s;
+  transform: translateY(-2px);
+  box-shadow: 0px 5px 5px var(--shadow-color);
+}
+
 .teacher_search_result_item {
     display: flex;
 }
