--- a/frontend/src/app/(authenticated_user)/courses/styles.module.css
+++ b/frontend/src/app/(authenticated_user)/courses/styles.module.css
@@ -2,13 +2,29 @@
   padding: 20px;
   display: flex;
   flex-direction: column;
-  gap: 40px;
+  gap: 20px;
 }
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 20px;
+}
+.left_button {
+  font-family: var(--font-josefin);
+  background: var(--cyan2);
+  color: white;
+  border: 0px;
+  border-radius: 50px;
+  padding: 10px;
+  font-size: 1rem;
+  transition: 0.25s;
+  width: 200px;
+}
+.left_button:hover {
+  cursor: pointer;
+  transition: 0.25s;
+  transform: translateY(-2px);
+  box-shadow: 0px 5px 5px var(--shadow-color);
 }
 .right_button {
   font-family: var(--font-josefin);
@@ -17,12 +33,9 @@
   border: 0px;
   border-radius: 50px;
   padding: 10px;
-  margin-top: 15px;
   font-size: 1rem;
   transition: 0.25s;
   width: 200px;
-  align-self: flex-end;
-  margin-left: auto;
 }
 .right_button:hover {
   cursor: pointer;
@@ -56,6 +69,13 @@
   border-radius: 50px;
   overflow: hidden;
   width: 100%;
+}
+
+.nav_container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 20px;
 }
 
 .nav_button {
@@ -121,4 +141,69 @@
   text-align: center;
   font-weight: bold;
   margin: 1rem 0;
+}
+
+.add_course_button_container {
+  background: var(--cyan2);
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.add_course_button_container:hover {
+  cursor: pointer;
+  transition: 0.25s;
+  transform: translateY(-2px);
+  box-shadow: 0px 5px 5px var(--shadow-color);
+}
+
+.add_course_button {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.edit_course_button_container {
+  background: var(--cyan2);
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.edit_course_button_container:hover {
+  cursor: pointer;
+  transition: 0.25s;
+  transform: translateY(-2px);
+  box-shadow: 0px 5px 5px var(--shadow-color);
+}
+
+.edit_course_button {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.teacher_courses_table {
+  max-height: 450px;
+  overflow: auto;
+}
+
+.course_majors_list {
+  display: flex;
+  margin: 0;
+}
+
+.course_majors_list p {
+  margin: 0;
+}
+
+.majors_list {
+  display: flex;
+}
+
+.courses_students_table {
+  max-height: 250px;
+  overflow: auto;
 }
