--- a/frontend/src/app/(authenticated_user)/majors/styles.module.css
+++ b/frontend/src/app/(authenticated_user)/majors/styles.module.css
@@ -1,6 +1,222 @@
 .majors_root {
-  padding: 20px;
+  height: 100%;
   display: flex;
   flex-direction: column;
   gap: 40px;
+}
+
+.majors_list {
+  flex: 1;
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.left_button {
+  font-family: var(--font-josefin);
+  background: var(--cyan2);
+  color: white;
+  border: 0px;
+  border-radius: 50px;
+  padding: 10px;
+  font-size: 1rem;
+  transition: 0.25s;
+  width: 200px;
+}
+.left_button:hover {
+  cursor: pointer;
+  transition: 0.25s;
+  transform: translateY(-2px);
+  box-shadow: 0px 5px 5px var(--shadow-color);
+}
+.right_button {
+  font-family: var(--font-josefin);
+  background: var(--red1);
+  color: white;
+  border: 0px;
+  border-radius: 50px;
+  padding: 10px;
+  font-size: 1rem;
+  transition: 0.25s;
+  width: 200px;
+}
+.right_button:hover {
+  cursor: pointer;
+  transition: 0.25s;
+  transform: translateY(-2px);
+  box-shadow: 0px 5px 5px var(--shadow-color);
+}
+.centered_button {
+  font-family: var(--font-josefin);
+  background: var(--red1);
+  color: white;
+  border: 0px;
+  border-radius: 50px;
+  padding: 10px;
+  margin-top: 15px;
+  font-size: 1rem;
+  transition: 0.25s;
+  width: 200px;
+  margin: 0 auto;
+}
+.centered_button:hover {
+  cursor: pointer;
+  transition: 0.25s;
+  transform: translateY(-2px);
+  box-shadow: 0px 5px 5px var(--shadow-color);
+}
+
+.nav_bar {
+  display: flex;
+  background-color: #f99779;
+  border-radius: 50px;
+  overflow: hidden;
+  width: 100%;
+}
+
+.nav_container {
+  display: flex;
+  justify-content: end;
+  flex-direction: row;
+  align-items: center;
+  gap: 20px;
+}
+
+.nav_button {
+  font-family: var(--font-josefin);
+  background: none;
+  color: white;
+  border: 0;
+  border-radius: 0;
+  padding: 10px;
+  flex: 1;
+  font-size: 1rem;
+  transition: 0.25s;
+}
+.nav_button.selected {
+  background: var(--red1);
+}
+
+.scroll_list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  max-height: 300px;
+  overflow-y: auto;
+  padding-right: 10px;
+}
+.header_bar {
+  display: flex;
+  justify-content: space-between;
+  background-color: #f0f0f0;
+  padding: 10px;
+  font-weight: 550;
+  color: #444444;
+  border-bottom: 1px solid #ccc;
+}
+
+.column_header {
+  flex: 1;
+  text-align: center;
+}
+.list_item {
+  background-color: #f5f5f5;
+  border-radius: 8px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  border-bottom: 1px solid #ccc;
+}
+.inline_info {
+  display: flex;
+  justify-content: space-between;
+}
+
+.major_name,
+.major_credits,
+.teacher_name,
+.max_enrollment {
+  flex: 1;
+  text-align: center;
+}
+.red_center_text {
+  color: red;
+  text-align: center;
+  font-weight: bold;
+  margin: 1rem 0;
+}
+
+.add_major_button_container {
+  background: var(--cyan2);
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.add_major_button_container:hover {
+  cursor: pointer;
+  transition: 0.25s;
+  transform: translateY(-2px);
+  box-shadow: 0px 5px 5px var(--shadow-color);
+}
+
+.add_major_button {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.edit_major_button_container {
+  background: var(--cyan2);
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.edit_major_button_container:hover {
+  cursor: pointer;
+  transition: 0.25s;
+  transform: translateY(-2px);
+  box-shadow: 0px 5px 5px var(--shadow-color);
+}
+
+.edit_major_button {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.teacher_majors_table {
+  max-height: 450px;
+  overflow: auto;
+}
+
+.majors_list {
+  display: flex;
+  padding-bottom: 40px;
+}
+
+.majors_courses_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.majors_courses_table {
+  flex: 1;
+  overflow: auto;
+  width: 100%;
+}
+
+.majors_root p {
+  margin: 0;
 }
